--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altgraph==0.17.4
 chardet==5.2.0
+lxml==5.3.0
 macholib==1.16.3
 modulegraph==0.19.6
 packaging==24.2
@@ -11,5 +12,6 @@ pyinstaller-hooks-contrib==2025.0
 PyMuPDF==1.25.1
 PyPDF2==3.0.1
 pywin32-ctypes==0.2.3
+python-docx==1.1.2
 reportlab==4.2.5
 setuptools==75.8.0
